single product view

--- a/app/views/partials/flash-message.html
+++ b/app/views/partials/flash-message.html
@@ -23,7 +23,7 @@
 {% if errorMessage.length > 0 %}
 	<section class="flash-message-container" style="display: block;">
 		<div class="flash-message error">
-			<p class="text"></p>
+			<p class="text">{{ errorMessage[0] }}</p>
 			<i class="fa fa-times"></i>
 		</div>
 	</section>
