--- a/public/stylus/elements/texts.styl
+++ b/public/stylus/elements/texts.styl
@@ -118,3 +118,14 @@
 	color #585858
 	letter-spacing .5px
 	line-height 1em
+	
+	
+/*------------------------------------*
+	$ SINGLE PRODUCT TEXT
+*------------------------------------*/
+.single-product-text
+	font-family 'Oswald'
+	font-size 1.75rem
+	color #585858
+	letter-spacing 1px
+	line-height 1em
