--- a/public/css/works.css
+++ b/public/css/works.css
@@ -174,6 +174,13 @@ input[type="submit"] {
   letter-spacing: 0.5px;
   line-height: 1em;
 }
+.single-product-text {
+  font-family: 'Oswald';
+  font-size: 1.75rem;
+  color: #585858;
+  letter-spacing: 1px;
+  line-height: 1em;
+}
 .thick-menu-container {
   display: block;
   font-weight: 600;
